Bug 337174: "Manage Search Engines" misaligned in menu, patch by Pam Greene <pamg.bugs@gmail.com>, r=bryner

--- a/mozilla/browser/themes/winstripe/browser/browser.css
+++ b/mozilla/browser/themes/winstripe/browser/browser.css
@@ -57,8 +57,8 @@
 
 /* ..... fix searchbar "add engine" padding issue ..... */
 
-#searchbar .searchbar-dropmarker menuseparator + menuitem { 
--moz-padding-start: 4px; 
+#searchbar .searchbar-popup .open-engine-manager { 
+  -moz-padding-start: 4px; 
 }
 
 #searchbar[empty="true"] .searchbar-textbox {
